--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Playing with Basic Tags</title>
 </head>
-<body>
+<body style="background-color: rgb(224, 188, 140);">
     <h1>Gol D Roger</h1>
     <br/>
     <h3>Wealth, fame, power. Gold Roger, the kind of the Pirates, attained this and everything else the world had to offer.</h3>
@@ -21,3 +21,37 @@
 <img src="https://wallpaperaccess.com/going-merry"
 </body>
 </html>
+
+<div style="border: solid 2px black; padding: .5rem;">
+    <form>
+
+        <fieldset>
+            <legend>Did you grieve the loss of Merry?</legend>
+            <p>
+                <input type="radio" name="size" id="size0" value="size0" />
+                <label for="size0">Yes</label>
+            </p>
+            <p>
+                <input type="radio" name="size" id="size1" value="size1" />
+                <label for="size1">No</label>
+            </p>
+        </fieldset>
+
+    </form>
+</div>
+
+<h1>Spoiler Alert!</h1>
+<p>
+    Be sure to have tissues on hand!
+</p>
+<iframe src="https://www.youtube.com/embed/NBx04aWOlYc" frameborder="0" width="500" height="315" allowfullscreen>
+</iframe>
+
+<nav>
+    <h1>To see this video on youtube!</h1>
+    <ul>
+        <li>
+            <a href="https://youtu.be/NBx04aWOlYc">Goodbye Going Merry, song: Dear friends</a>
+        </li>
+    </ul>
+</nav>
